--- a/styles.css
+++ b/styles.css
@@ -53,10 +53,10 @@ body {
 
 #send-button {
     padding: 10px;
-    margin-right: 10px;
-
+    margin-right: 50px;
 }
 .h2{
+    margin-top: 100px;
     text-align: center;
     color: rgb(236, 227, 227);
     margin-bottom: 0px;
